tests/od2trips/errors/format/o/o_factor_missing/errors.od2trips
Error: Broken factor: '1          2          100'.
Quitting (on error).
